--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,21 @@
-@charset "utf-8";
+@charset "UTF-8";
 /* CSS Document */
 
+/* henter et andet style sheet ind i mit eget */
+@import "simplegrid.css";
+
+body {
+	background: white;
+}
+.content {
+	background: #ddd;
+}
+[class*='col-']{
+	margin-bottom: 100px;
+}
+.bar{
+	padding-right: 0px; 
+}
+.bar .content{
+	background: #B5B2B0;
+}
