--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,6 +110,54 @@ body {
     text-decoration: none;
 }
 
+@media only screen and (min-width : 765px) and (max-width:768px) {
+	.dropdown .dropbtn {
+    color: rgba(0,0,0,0);
+    background-image: url("../images/burger.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+.navbar .bar {
+    height: 56px;
+    background-color: #3D6BB4;
+}
+.navbar .udreBar {
+    padding: 56px 0;
+}
+.navbar .stykke {
+    height: 56px;
+    background-color: #FFFFFF;
+    float: left;
+}
+.navbar .stykke img {
+    height: 56px;
+}
+.desktop {
+    display: none !important;
+    height: 0;
+    width: 0;
+}
+div.logo img {
+    height: auto;
+    max-width: 250px;
+}
+div.logo {
+    display: block;
+    height: auto;
+    max-width: 250px;
+    background: #FFFFFF;
+    padding: 56px 56px 56px 0;
+    float: left;
+}
+}
 @media only screen and (min-width : 555px) and (max-width:764px) {
 	.dropdown .dropbtn {
     color: rgba(0,0,0,0);
@@ -158,8 +206,7 @@ div.logo {
     float: left;
 }
 }
-
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 554px) {
 .desktop {
     display: none !important;
     height: 0;
@@ -175,7 +222,7 @@ div.logo {
 }
 }
 
-@media only screen and (min-width: 765px) {
+@media only screen and (min-width: 769px) {
 .navbar .bar {
     height: 56px;
     background-color: #3D6BB4;
