--- a/styles/simplegrid.css
+++ b/styles/simplegrid.css
@@ -27,7 +27,7 @@
 
 .grid {
 	width: 100%;
-	max-width: 1140px;
+	max-width: 1920px;
 	min-width: 748px; /* when using padded grid on ipad in portrait mode, width should be viewport-width - padding = (768 - 20) = 748. actually, it should be even smaller to allow for padding of grid containing element */
 	margin: 0 auto;
 	overflow: hidden;
@@ -40,8 +40,8 @@
 }
 
 .grid-pad {
-	padding-top: 20px;
-	padding-left: 20px; /* grid-space to left */
+	padding-top: 0;
+	padding-left: 0; /* grid-space to left */
 	padding-right: 0; /* grid-space to right: (grid-space-left - column-space) e.g. 20px-20px=0 */
 }
 
@@ -174,14 +174,14 @@
 	margin-left: 8.33%
 }
 
-@media handheld , only screen and (max-width : 764px ){
+@media handheld , only screen and (max-width : 768px ){
 	.grid {
 		width: 100%;
 		min-width: 0;
 		margin-left: 0;
 		margin-right: 0;
-		padding-left: 20px; /* grid-space to left */
-		padding-right: 10px; /* grid-space to right: (grid-space-left - column-space) e.g. 20px-10px=10px */
+		padding-left: 0px; /* grid-space to left */
+		padding-right: 0px; /* grid-space to right: (grid-space-left - column-space) e.g. 20px-10px=10px */
 	}
 
 	[class*='col-'] {
