--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ select {
     background: none;
     margin: 0 0 5px;
     padding: 10px;
-	
+	font-family: 'lato';
     border-radius: 5px;
     color: #2A1000; 
 	
@@ -177,25 +177,34 @@ nav {
 }
 .sweetbot-pakker p {
 	margin-left: 10px;
+	font-family: 'lato';
 }
 
 .bunden {
 	vertical-align: bottom;
 	display: inline-block;
 	
+	
 }
-.pakke .content h2, h3 {
+.bunden h3 {
+	text-align: center;
+}
+.pakke .content h2 {
     text-align: center;
+	font-family: 'lato';
 }
 .hotbot-pakker {
 	height: 180px;
 	background-color: #B5B2B0;
+	font-family: 'lato';
 }
 .hotbot-pakker h2, h3{
 	text-align: center;
+	font-family: 'lato';
 }
 .hotbot-pakker p{
 	margin-left: 10px;
+	font-family: 'lato';
 }
 .dropdown-content a {
     float: none;
